...
        image.heightAnchor.constraint(equalTo: image.widthAnchor, multiplier: 1).isActive = true
        image.layer.cornerRadius = 12
        image.layer.masksToBounds = true
        return image
    }()

    private lazy var likeButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityIdentifier = "likeButton"
        button.addTarget(self, action: #selector(addToFavourites), for: .touchUpInside)
        button.accessibilityLabel = "Add to Favourites"
        return button
...
    // MARK: - Private Methods
    private func setupView() {
        backgroundColor = .white
        addSubviews()
        updateLikedButton()
        updateCartButton()
        self.accessibilityIdentifier = "NFTCell"
    }

    private func addSubviews() {
        createStars()

        let nameAndPriceStack = createStackView(axis: .vertical,
...
