...
        return label
    }()

    private let tableView: UITableView = {
        let tableView = UITableView()
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.accessibilityIdentifier = "profileTableView"
        tableView.separatorInset = .init(top: 16, left: 16, bottom: 16, right: 16)
        tableView.separatorStyle = .none
        tableView.backgroundColor = .white
        tableView.isScrollEnabled = false
        return tableView
    }()
    private lazy var editButton: UIBarButtonItem = {
        let barButtonItem = UIBarButtonItem()
        barButtonItem.accessibilityIdentifier = "edit"
        barButtonItem.image = UIImage(named: "editButton")
        barButtonItem.tintColor = .black
        barButtonItem.imageInsets = UIEdgeInsets(top: 0, left: 0, bottom: 0, right: 9)
        barButtonItem.action = #selector(editButtonTapped)
        barButtonItem.target = self
        return barButtonItem
...
