...
        collectionView.register(PaymentTypeCollectionViewCell.self,
                                forCellWithReuseIdentifier: PaymentTypeCollectionViewCell.reuseIdentifier)
        collectionView.backgroundColor = .nftWhite
        collectionView.isUserInteractionEnabled = true
        collectionView.isScrollEnabled = false
        collectionView.allowsMultipleSelection = false
        collectionView.accessibilityIdentifier = "cartCollection"

        return collectionView
    }()

    private lazy var paymentLayerView: UIView = {
        let view = UIView()
...
